--- a/chessboard.css
+++ b/chessboard.css
@@ -1,16 +1,21 @@
 body {
-    display: flex;
-    justify-content: center;
+    display:block;
+    flex-direction: column;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: underline;
+    font-size: 120%;
+    background-color: rgba(13, 189, 80, 0.507);
 }
-table {
-    margin: 100px 0 100px 0;
+table { 
     border-collapse: collapse;
     border: 0.5px solid black;
     padding: 0;
+    margin: auto;
 }
 td {
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
 }
 tr:nth-child(odd) td:nth-child(even){
 background-color: black;
@@ -18,3 +23,9 @@ background-color: black;
 tr:nth-child(even) td:nth-child(odd){
     background-color: black;
 }
+tr:nth-child(odd) td:nth-child(odd){
+    background-color: white;
+    }
+    tr:nth-child(even) td:nth-child(even){
+        background-color: white;
+    }
